2009-05-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Remember scribble cursor position.


2009-05-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/symbols.c, doc/geany.txt, doc/geany.html,
   tagmanager/makefile.win32, tagmanager/nestlevel.c,
   tagmanager/nestlevel.h, tagmanager/python.c, tagmanager/rest.c,
   tagmanager/Makefile.am, wscript:
   Merge unstable branch:
   Add reStructuredText scope information for tags (for symbol list
   grouping).
   Read custom system global tags files from $prefix/share/geany/tags;
   Closes #2778923.
   Show the number of tags in a user global tags file (instead of the
   running total) in the debug message.
   Also print debug messages when loading a tag file manually or for
   default global tags files e.g. python.tags.
 - code:
   Move NestingLevel tags code into a separate file, add functions.
 - docs:
   Add 'Installation prefix' section instead of quoting '/usr/local'
   each time.
   Update for custom system global tags files.


2009-05-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Unset maybe previously keywords when setting up Scintilla for
   XML files. This fixed wrong highlighting after switching back to
   filetype XML from another one.
 * src/utils.c:
   Use plain old fwrite() in utils_write_file(). g_file_set_contents()
   is only used when explicitly requested.
 * src/dialogs.c:
   Remove unnecessary call to g_intern_string() to fix build with
   GLib 2.8 (closes #2790051).


2009-05-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Make the clear icon of entry fields act on the release event, not
   on the press event like for other buttons.
 * src/editor.c:
   Refactor some multiple used code into get_multiline_comment_style().
 * src/main.c:
   Create parent directories if necessary when checking for the
   configuration directory on startup (closes #2784577).

