@@ -12,7 +12,6 @@ Note: features included in brackets have lower priority.
 	  programming languages
 	o configurable filetype and project make commands (e.g. using
 	  bud for D)
-	o MRU documents switching
 	o (support for adding plugin filetypes - SCI_LOADLEXERLIBRARY?)
 	o (selectable menu of arguments to use for Make, from Make Custom)
 	o (DBUS)
